Somewhat of a betting system in place

--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
   "dependencies": {
     "@types/sequelize": "^4.27.30",
     "@yamdbf/core": "^3.0.2",
+    "bull": "^3.4.8",
     "discord.js": "discordjs/discord.js",
     "pg": "6.4.0",
     "sequelize": "4.2.1",
-    "sqlite3": "3.1.8"
+    "sqlite3": "3.1.8",
+    "table": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/bull": "^3.4.0",
+    "@types/table": "^4.0.5"
   }
 }
