--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bull": "^3.4.8",
     "discord.js": "discordjs/discord.js",
     "pg": "^6.4.2",
-    "sequelize": "4.2.1",
+    "sequelize": "^5.3.0",
     "sqlite3": "3.1.8",
     "table": "^5.1.0"
   },
